gerrit312/gerritser.yaml
apiVersion: v1
kind: Service
metadata:
  name: gerrit-service

spec: 
  type: NodePort
  ports: 
    - port: 8080
      targetPort: 0
      nodePort: 30010
  selector:
      app: gerrit
      type: frontend
