gerrit312/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: ec2-3-21-39-210.us-east-2.compute.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gerrit-service
          servicePort: 8080
